client/assets/style.css
/*
 * SPDX-FileCopyrightText: 2023 Kerstin Humm <mail@erictapen.name>
 *
 * SPDX-License-Identifier: GPL-3.0-or-later
 */

@font-face {
    font-family: "Roboto Condensed";
    src: url('/assets/fonts/RobotoCondensed-Light.ttf') format('truetype');
    font-style: normal;
    font-weight: 300;
}

@font-face {
    font-family: "Roboto Condensed";
    src: url('/assets/fonts/RobotoCondensed-LightItalic.ttf') format('truetype');
    font-style: italic;
    font-weight: 300;
}

@font-face {
    font-family: "Roboto Condensed";
    src: url('/assets/fonts/RobotoCondensed-Regular.ttf') format('truetype');
    font-style: normal;
    font-weight: 400;
}

@font-face {
    font-family: "Roboto Condensed";
    src: url('/assets/fonts/RobotoCondensed-Italic.ttf') format('truetype');
    font-style: italic;
    font-weight: 400;
}

@font-face {
    font-family: "Roboto Condensed";
    src: url('/assets/fonts/RobotoCondensed-Medium.ttf') format('truetype');
    font-style: normal;
    font-weight: 500;
}

@font-face {
    font-family: "Roboto Condensed";
    src: url('/assets/fonts/RobotoCondensed-MediumItalic.ttf') format('truetype');
    font-style: italic;
    font-weight: 500;
}

@font-face {
    font-family: "Roboto Condensed";
    src: url('/assets/fonts/RobotoCondensed-Bold.ttf') format('truetype');
    font-style: normal;
    font-weight: 700;
}

@font-face {
    font-family: "Roboto Condensed";
    src: url('/assets/fonts/RobotoCondensed-BoldItalic.ttf') format('truetype');
    font-style: italic;
    font-weight: 700;
}

/* noto-sans-symbols-2-regular - latin_symbols */
@font-face {
  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
  font-family: 'Noto Sans Symbols 2';
  font-style: normal;
  font-weight: 400;
  src: url('/assets/fonts/noto-sans-symbols-2-v22-symbols-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
}

@media (min-width: 801px) {
  body {
    font-size: 20px;
  }
  .station-legend {
    min-width: 300px;
  }
}

@media (max-width: 800px) {
  body {
    font-size: 15px;
  }
  .station-legend {
    min-width: 130px;
  }
}

body {
  margin: 0;
  font-family: "Roboto Condensed", "Noto Sans Symbols 2";
  font-weight: 300;
  font-style: normal;
}

h1 {
  position: absolute;
  left: 10%;
  z-index: 1;
}

#app {
  margin-top: 10vh;
  margin-bottom: 5vh;
}

.menu-container {
  display: flex;
  flex: 1;
  justify-content: center;
}

.menu-button {
  border-radius: 50%;
  width: 1.5em;
  height: 1.5em;
  margin-top: 1em;
  font-size: 200%;
  font-family: "Noto Sans Symbols 2";
  border: none;
  background: none;
}

#row1 {
  height: 70vh;
  display: flex;
  flex-flow: row;
  position: relative;
}

#row2 {
  height: 5vh;
  display: flex;
  flex-flow: row;
}

#row3 {
  height: 10vh;
  display: flex;
  flex-flow: row;
}

#loading-screen {
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
}

#diagram {
  flex: 1;
}

#time-text-legend {
  flex: 1;
  position: relative;
}

.station-legend {
  margin-left: 1em;
}

#trip-close-button {
  position: absolute;
  top: 1em;
  right: 1em;
  width: 1.5em;
  height: 1.5em;
  font-size: 200%;
  border: none;
  background: none;
}

#skip-tutorial-button {
  display: flex;
  align-items: center;
  justify-content: center;
  flex: 1;
  margin-left: 30vw;
  margin-right: 30vw;
}

.tutorial-image {
  display: flex;
  align-items: center;
  justify-content: center;
  flex: 1;
}

#tutorial-progress-container {
  width: 100%;
  display: flex;
  flex-direction: row;
}

.tutorial-progress {
  background-image: -webkit-linear-gradient(left, black 0%, black 50%, white 50.01%, white 100%);
  background-size: 200%;
  background-position-y: 0;
  background-repeat: no-repeat;
  height: 1em;
  flex-grow: 1;
  display: flex;
  margin: 0 5px;
}

.tutorial-progress.active {
  animation-name: loading;
  animation-timing-function: linear;
}

@-webkit-keyframes loading {
  0% { background-position-x: 100%; }
  100% { background-position-x: 0; }
}

.tutorial-progress.passed {
  background-position-x: 0;
}

.tutorial-progress.inactive {
  background-position-x: 100%;
}

#tutorial-button {
  position: absolute;
}

#tutorial-button.previous {
  top: 0%;
  left: 0%;
  width: 50vw;
  height: 100vh;
}

#tutorial-button.next {
  top: 0%;
  right: 0%;
  width: 50vw;
  height: 100vh;
}

